# harp

./: .gitattributes  .gitignore  .gitmodules  .srclist  .travis.yaml  .travis.yml  .ycm_extra_conf.py  404.html  CHANGES  CHANGES_BY_HARPDAAL  CMakeLists.txt  CSCGraph.hpp  CSRGraph.cpp  CSRGraph.cu  CSRGraph.hpp  Constants.hpp  Count.cpp  Count.hpp  CountMat.cpp  CountMat.hpp  CountsTable.hpp  DataTable.cpp  DataTable.hpp  DataTableColMajor.cpp  DataTableColMajor.cu  DataTableColMajor.hpp  DivideTemplates.cpp  DivideTemplates.hpp  EdgeList.cpp  EdgeList.hpp  FAQ.md  Graph.cpp  Graph.hpp  Hands-on-MFSGD.md  Hands-on-NaiveBayes.md  Hands-on-kmeans.md  Hands-on.md  Helper.cpp  Helper.hpp  IndexSys.cpp  (+55 more)
3rd/pGBRT/: readme.txt
SpBLAS/: nist_spblas.cpp
SpDM3/include/: defs.h  dmat.h  matmul.h  spmat.h  utility.h
SpDM3/src/: .nfs000000000c4a18f70000000d  dmat.impl  matmul.impl  mmio.cpp  spmat.impl
SpMP/: COO.cpp  CSR.cpp  CSR.hpp  Permute.cpp
SpMP/synk/: loadimba.cpp
SpMP/test/: reordering_test.cpp
algorithms/kernel/: algorithm_base_impl.cpp  algorithm_quality_metric_set_types.cpp  argument_storage.h  kernel.h  service_dnn_internal.h  service_error_handling.h  service_heap.h  service_sort.h  service_threading.h
algorithms/threading/: export.def  export_lnx32e.def  export_mac.def  export_win32e.def  service_thread_pinner.cpp  service_thread_pinner.h  threading.cpp  threading.h
api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
communication/: BUILD  CMakeLists.txt  Communicator.cpp  Communicator.h  Rotator.cpp  Rotator.h
communication/mpi/: NBFunctionalElement.h  NonBlockingQueue.cpp  NonBlockingQueue.h
communication/tcp/: MessageAcceptor.cpp  Server.cpp
contrib/: README.md  pom.xml
contrib/test_scripts/: k-means.sh  km.sh  ldacvb.sh  mlr.sh
core/: pom.xml
core/harp-boot/: pom.xml
core/harp-collective/: pom.xml
core/harp-daal-interface/: pom.xml
core/harp-hadoop/: pom.xml
core/scripts/: env-config.sh  kill_all_java_processes.sh
css/: style.min.css
data/15scene/: 15scene.idlst
data_structures/: Array.cpp  Array.h  CMakeLists.txt  DataStructures.h  DataTypes.cpp  DataTypes.h  Partition.cpp  Partition.h  PartitionAccessor.cpp  PartitionAccessor.h  Table.cpp  Table.h  Utils.cpp  Utils.h  inculdes.h
datasets/daal_nn/: neural_network_train_dense_1.csv  neural_network_train_dense_2.csv  neural_network_train_dense_3.csv
datasets/tutorial/: README.md
distribution/: pom.xml
doc/: SCDemo-Applications Step-by-Step.pptx
doc/histogram/: GBDT.ppt  readme.md
doc/ref/: gbt-paper.bib  gbt-paper.cite  readme.md
docs/: index.xml  install.html
docs/data-interface/: index.html
docs/getting-started/: index.html
docs/getting-started-cluster/: index.html
docs/getting-started-troubleshooting/: index.html
docs/prerequisites/: index.html
docs/resources/: index.html
docs/survey/: index.html
examples/: run_harp_ccd.py  run_harp_kmeans.py
examples/cpp/: DAALExamples.sln  daal_lnx.lst  daal_mac.lst  makefile_lnx  makefile_mac
examples/daal/: run_harp_daal_ALSDaal.py  run_harp_daal_COVDaal.py  run_harp_daal_NNDaal.py  run_harp_daal_SGDDaal.py
examples/generators/: BUILD  DataGenerator.cpp  DataGenerator.h
examples/java/: daal.lst.bat  daal_lnx.lst  daal_mac.lst  launcher.bat  launcher.sh  launcher_lnx.sh  launcher_mac.sh
examples/kmeans/: BUILD  kmeans.cpp
examples/mic_offload/: makefile_lnx
experimental/: pom.xml
experimental/test_scripts/: harp-daal-mfsgd.sh  harp-daal-subgraph.sh
hadoop/test_scripts/: scdemo-kmeans.sh
harp-app/: README.md  pom.xml
harp-app/test_scripts/: lda.sh
harp-daal-app/: README.md  harp-daal-als-hsw.sh  harp-daal-kmeans-hsw.sh  harp-daal-kmeans-run.sh  harp-daal-nn-run.sh  harp-daal-pca.sh  harp-daal-svd-run.sh  launchKmeans.sh  launchSGD.sh  pom.xml
harp-daal-app/daal-src/: README.md  makefile  makefile-bak  makefile.lst  makefile.lst.bak
harp-daal-app/test_scripts/: harp-daal-als-hsw.sh  harp-daal-als.sh  harp-daal-cov-hsw.sh  harp-daal-cov.sh  harp-daal-kmeans-hsw.sh  harp-daal-kmeans.sh  harp-daal-linreg-hsw.sh  harp-daal-linreg.sh  harp-daal-mf_sgd-hsw.sh  harp-daal-mf_sgd.sh  harp-daal-mom-hsw.sh  harp-daal-mom.sh  harp-daal-naive-hsw.sh  harp-daal-naive.sh  harp-daal-nn-hsw.sh  harp-daal-nn.sh  harp-daal-pca-hsw.sh  harp-daal-pca.sh  harp-daal-qr-hsw.sh  harp-daal-qr.sh  harp-daal-ridgereg-hsw.sh  harp-daal-ridgereg.sh  harp-daal-subgraph.sh  harp-daal-svd-hsw.sh  harp-daal-svd.sh  harp-daal-tutorial-kmeans.sh
harp-daal-python/: README.md
harp-daal-python/examples/: run_all.sh  run_harp_mds.py  (+2 more)
harp-project/: pom.xml
harp-python/: README.md  copy-data.sh  requirements.txt  run.sh
harp-tutorial-app/: README.md  pom.xml
imageclustering/: README.md
include/: daal.h  daal_win.h
kernels/: HarpKernels.h
ml/: pom.xml
python/: harp_constants.py  harp_session.py  test.py
radix/: Makefile  blocked_graph.h  blocker.h  copy_play.cpp  guider.h  par_guider.h  par_partitioner.h  partitioner.h  pblocker.h  pr  pr.cpp  pr.h  pvector.h
run/: 1.InstallDAAL.md  2.InstallXGBoost.md  3.BasicBenchmark.md
sc2017-tutorial/: Hands-on-MFSGD.md  Hands-on-NaiveBayes.md  Hands-on-kmeans.md
src/: demo_kmeans.py  show_kmeans.py
sub/: xgboost
testscripts/: DataCopy-juliet.sh  check-nodes.sh  copyData.sh  fascia_run.sh  fascia_run_t-001.sh  hsw-run-pgbsc-mpi.sh  hsw-run-sg2vec-mpi.sh  machinehosts  pgbsc_run.sh  pgbsc_run_t-001.sh  sg2vec_run.sh  sg2vec_run_t-001.sh  sg2vec_slurm_mpi.sh  syncCluster.sh  vtune-proc-attach-fascia.sh  vtune-proc-attach-hpl.sh  vtune-proc-attach.sh
tutorial/: Hands-on-NaiveBayes.md  README.md  conda.list  readme.md
util/: CMakeLists.txt  Print.h  ThreadPool.h  Timing.cpp  Timing.h  print.h  timing.h  util.h
website/: README.md  build.sh  community.html  config.yaml  feedback.html  index.html  package.json  resources.html
worker/: CMakeLists.txt  Worker.cpp  Worker.h
(+8913 files in other folders)
